# Arthachitra

./: .dockerignore  .env.production  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  Dockerfile.tickengine  LICENSE  Makefile  README.md  SECURITY.md  SETUP.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  humans.txt  package.json  robots.txt  supervisord.conf
.github/workflows/: cd.yml  ci.yml
backend/: .env.template  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/api/: websocket.py
backend/api/routes/: auth.py  execution.py  market_data.py  portfolio.py
backend/core/: config.py  database.py  exceptions.py  security.py  websocket_manager.py
backend/core/auth/: jwt_handler.py
backend/core/engine/: trading_engine.py
backend/core/models/: orders.py  portfolio.py
backend/core/utils/: email.py  encryption.py  logger.py  validators.py
backend/database/: connection.py  models.py  pool.py
backend/database/models/: base.py  init.py
backend/market_connectors/base/: connector.py
backend/market_connectors/indian/: fyers.py  zerodha.py
backend/tests/: conftest.py
backend/tests/test_api/: test_market_data.py
backend/tests/test_core/: test_trading_engine.py
config/: dev.yaml  env.template  prod.yaml  production.yaml  test.yaml
database/: init.sql  schema.sql  seed_data.py
deploy/docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.ml
deploy/kubernetes/production/: backend.yaml  configmap.yaml  deployment.yaml  frontend.yaml  ingress.yaml  ml.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml  services.yaml  tick-engine.yaml
deploy/monitoring/: alerts.yml  grafana-dashboard.json  prometheus.yml
docs/: BROKER_INTEGRATION.md  DEV_GUIDE.md  index.md
frontend/: .env.example  .env.template  jest.config.js  jest.setup.js  next.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
frontend/public/: manifest.json  robots.txt  sitemap.xml
frontend/src/components/charts/: CandlestickChart.tsx  HeatmapChart.tsx  VolumeChart.tsx
frontend/src/components/orderbook/: Heatmap.tsx  OrderBook.tsx  OrderBookLadder.tsx  OrderBookLevel.tsx  index.ts
frontend/src/components/themes/: ThemeProvider.tsx  ThemeSwitcher.tsx  index.ts  useTheme.ts
frontend/src/components/trading/: OrderEntry.tsx  PositionTracker.tsx  TradingPanel.tsx  index.ts
frontend/src/components/ui/: Button.tsx  Header.tsx  Modal.tsx  Sidebar.tsx  index.ts
frontend/src/hooks/: useLocalStorage.ts  useMarketData.ts  useWebSocket.ts
frontend/src/locales/: en.json  hi.json
frontend/src/pages/: 404.tsx  500.tsx  _app.tsx  _document.tsx  index.tsx  login.tsx  orders.tsx  portfolio.tsx
frontend/src/pages/api/: health.ts
frontend/src/store/: authSlice.ts  chartSlice.ts  index.ts  orderBookSlice.ts  portfolioSlice.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  formatters.ts
frontend/tests/components/: CandlestickChart.test.tsx  Chart.test.tsx
frontend/tests/e2e/: trading.spec.ts
frontend/tests/mocks/: lightweight-charts.js
ml/: requirements.txt
ml/datasets/: sample_patterns.csv
ml/inference/: api_server.py
ml/models/: init.py
ml/models/pattern_recognition/: triangle_detector.py
ml/models/sentiment/: news_sentiment.py
ml/training/: train_patterns.py
nginx/: nginx.dev.conf  nginx.prod.conf
scripts/: backup-config.yaml  backup.sh  deploy-prod.sh  health-check.sh  install-deps.sh  monitor.sh  setup.sh  utils.sh
templates/email/: order_notification.html  verification.html
tests/integration/: test_trading_flow.py
tick_engine/: CMakeLists.txt
tick_engine/config/: config.yaml  tick_engine.conf
tick_engine/include/: order_book.h  redis_publisher.h  tick_handler.h
tick_engine/src/: main.cpp  order_book.cpp  redis_publisher.cpp  tick_handler.cpp
tick_engine/tests/: test_order_book.cpp
vedascript/examples/: moving_average_strategy.vs  rsi_strategy.vs  simple_strategy.vs
vedascript/interpreter/: builtins.py  interpreter.py
vedascript/lexer/: lexer.py
vedascript/parser/: ast_nodes.py  parser.py
vedascript/tests/: test_parser.py
